feat(borrowing-test): add borrowing entity validation tests